# py-parallel

./: README.md  pyproject.toml
py_parallel/: executor.py  executor2.py  lock.py  status.py  utils.py
py_parallel/executor/: __init__.py  delay.py
tests/executor/: test_delay.py
