[tool.poetry]
name = "py-parallel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "py_parallel"}]

[tool.poetry.dependencies]
python = ">=3.10"
psutil = ">=5.9"

[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
